Change the meaning of SWS (part 2).

--- a/priv/pages/home.html
+++ b/priv/pages/home.html
@@ -6,8 +6,8 @@
 
 <h1>Home</h1> 
 <p> 
-SWS, the "SWS Website System", is an <a href="http://www.erlang.org">Erlang</a>
-program to server simple websites. It uses Basho's
+SWS, the "Simple Website System", is an <a href="http://www.erlang.org">Erlang</a>
+program to serve simple websites. It uses Basho's
 <a href="https://github.com/basho/webmachine">Webmachine</a> as it's webserver
 and the Django template language (Evan Miller's
 <a href="https://github.com/evanmiller/erlydtl">ErlyDTL</a>) for rendering the
